--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+datacheck 1.0.0
+===============
+* updated NEWS file
+
+datacheck 0.9.9
+================
+* corrrected location of vignettes file
+* corrected spelling
+
+
 datacheck 0.9.8
 =================
 * removed demo directory
