--- a/vignettes/index.Rmd
+++ b/vignettes/index.Rmd
@@ -3,10 +3,12 @@
 %\VignetteIndexEntry{A Vignette for datacheck package}
 -->
 
+<!-- rmarkdown v1 -->
+
 
 ```{r setup,echo=FALSE, results='hide', message=FALSE}
-library(xtable)
 library(datacheck)
+library(xtable)
 options(xtable.type = 'html')
 ```
 
