--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+datacheck 1.0.4
+==============
+* Maintainance version
+* fixed several bugs
+* Removed the tests from the distribution
+
 datacheck 1.0.0
 ===============
 * updated NEWS file
